--- a/TNLA2021_analysis.ipynb
+++ b/TNLA2021_analysis.ipynb
@@ -167,6 +167,288 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={'%_of_Votes': 'vote_percentage','EVM_Votes':'evm_votes','Postal_Votes':'postal_votes'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df= df.groupby('Party')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Constituency</th>\n",
+       "      <th>Candidate</th>\n",
+       "      <th>Party</th>\n",
+       "      <th>evm_votes</th>\n",
+       "      <th>postal_votes</th>\n",
+       "      <th>Total_Votes</th>\n",
+       "      <th>vote_percentage</th>\n",
+       "      <th>Tot_Constituency_votes_polled</th>\n",
+       "      <th>Tot_votes_by_parties</th>\n",
+       "      <th>Winning_votes</th>\n",
+       "      <th>Win_Lost_Flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alandur</td>\n",
+       "      <td>T.M.Anbarasan</td>\n",
+       "      <td>Dravida Munnetra Kazhagam</td>\n",
+       "      <td>115777</td>\n",
+       "      <td>1008</td>\n",
+       "      <td>116785</td>\n",
+       "      <td>49.12</td>\n",
+       "      <td>237751</td>\n",
+       "      <td>17430100</td>\n",
+       "      <td>116785</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alandur</td>\n",
+       "      <td>B.Valarmathi</td>\n",
+       "      <td>All India Anna Dravida Munnetra Kazhagam</td>\n",
+       "      <td>75634</td>\n",
+       "      <td>580</td>\n",
+       "      <td>76214</td>\n",
+       "      <td>32.06</td>\n",
+       "      <td>237751</td>\n",
+       "      <td>15390974</td>\n",
+       "      <td>116785</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alandur</td>\n",
+       "      <td>N.Raja</td>\n",
+       "      <td>Desiya Makkal Sakthi Katchi</td>\n",
+       "      <td>261</td>\n",
+       "      <td>4</td>\n",
+       "      <td>265</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>237751</td>\n",
+       "      <td>4125</td>\n",
+       "      <td>116785</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alandur</td>\n",
+       "      <td>G Kamalakannan</td>\n",
+       "      <td>Tamil Nadu Ilangyar Katchi</td>\n",
+       "      <td>1096</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1105</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>237751</td>\n",
+       "      <td>22953</td>\n",
+       "      <td>116785</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alandur</td>\n",
+       "      <td>Dr.R.Karthikeyan</td>\n",
+       "      <td>Naam Tamilar Katchi</td>\n",
+       "      <td>16453</td>\n",
+       "      <td>53</td>\n",
+       "      <td>16506</td>\n",
+       "      <td>6.94</td>\n",
+       "      <td>237751</td>\n",
+       "      <td>3041974</td>\n",
+       "      <td>116785</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4121</th>\n",
+       "      <td>Coimbatore (South)</td>\n",
+       "      <td>RAGHUL GANDHI .K</td>\n",
+       "      <td>Hindustan Janta Party</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>73</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>154765</td>\n",
+       "      <td>73</td>\n",
+       "      <td>53209</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4122</th>\n",
+       "      <td>Coimbatore (South)</td>\n",
+       "      <td>VIVEK SUBRAMANIAM</td>\n",
+       "      <td>Manitha Urimaigal Kalaagam</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>154765</td>\n",
+       "      <td>527</td>\n",
+       "      <td>53209</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4123</th>\n",
+       "      <td>Coimbatore (South)</td>\n",
+       "      <td>VELLIMALAI</td>\n",
+       "      <td>Makkal Sananayaga Kudiyarasu Katchi,</td>\n",
+       "      <td>59</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>154765</td>\n",
+       "      <td>295</td>\n",
+       "      <td>53209</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4193</th>\n",
+       "      <td>Thalli</td>\n",
+       "      <td>RAVI.G</td>\n",
+       "      <td>Samajwadi Party</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>194022</td>\n",
+       "      <td>162</td>\n",
+       "      <td>120641</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4231</th>\n",
+       "      <td>Vilavancode</td>\n",
+       "      <td>VASANTHEESWARAN E</td>\n",
+       "      <td>Ulaga Makkal Katchi</td>\n",
+       "      <td>234</td>\n",
+       "      <td>1</td>\n",
+       "      <td>235</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>167836</td>\n",
+       "      <td>235</td>\n",
+       "      <td>87473</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>355 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Constituency          Candidate  \\\n",
+       "0                Alandur      T.M.Anbarasan   \n",
+       "1                Alandur       B.Valarmathi   \n",
+       "2                Alandur             N.Raja   \n",
+       "3                Alandur     G Kamalakannan   \n",
+       "4                Alandur   Dr.R.Karthikeyan   \n",
+       "...                  ...                ...   \n",
+       "4121  Coimbatore (South)   RAGHUL GANDHI .K   \n",
+       "4122  Coimbatore (South)  VIVEK SUBRAMANIAM   \n",
+       "4123  Coimbatore (South)         VELLIMALAI   \n",
+       "4193              Thalli             RAVI.G   \n",
+       "4231         Vilavancode  VASANTHEESWARAN E   \n",
+       "\n",
+       "                                         Party  evm_votes  postal_votes  \\\n",
+       "0                    Dravida Munnetra Kazhagam     115777          1008   \n",
+       "1     All India Anna Dravida Munnetra Kazhagam      75634           580   \n",
+       "2                  Desiya Makkal Sakthi Katchi        261             4   \n",
+       "3                   Tamil Nadu Ilangyar Katchi       1096             9   \n",
+       "4                          Naam Tamilar Katchi      16453            53   \n",
+       "...                                        ...        ...           ...   \n",
+       "4121                     Hindustan Janta Party         72             1   \n",
+       "4122                Manitha Urimaigal Kalaagam         74             0   \n",
+       "4123      Makkal Sananayaga Kudiyarasu Katchi,         59             0   \n",
+       "4193                           Samajwadi Party        162             0   \n",
+       "4231                       Ulaga Makkal Katchi        234             1   \n",
+       "\n",
+       "      Total_Votes  vote_percentage  Tot_Constituency_votes_polled  \\\n",
+       "0          116785            49.12                         237751   \n",
+       "1           76214            32.06                         237751   \n",
+       "2             265             0.11                         237751   \n",
+       "3            1105             0.46                         237751   \n",
+       "4           16506             6.94                         237751   \n",
+       "...           ...              ...                            ...   \n",
+       "4121           73             0.05                         154765   \n",
+       "4122           74             0.05                         154765   \n",
+       "4123           59             0.04                         154765   \n",
+       "4193          162             0.08                         194022   \n",
+       "4231          235             0.14                         167836   \n",
+       "\n",
+       "      Tot_votes_by_parties  Winning_votes  Win_Lost_Flag  \n",
+       "0                 17430100         116785           True  \n",
+       "1                 15390974         116785          False  \n",
+       "2                     4125         116785          False  \n",
+       "3                    22953         116785          False  \n",
+       "4                  3041974         116785          False  \n",
+       "...                    ...            ...            ...  \n",
+       "4121                    73          53209          False  \n",
+       "4122                   527          53209          False  \n",
+       "4123                   295          53209          False  \n",
+       "4193                   162         120641          False  \n",
+       "4231                   235          87473          False  \n",
+       "\n",
+       "[355 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
